<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (C) 2013 Moritz Heindl <lenidh[at]gmail[dot]com>
  ~
  ~ This program is free software: you can redistribute it and/or modify it under
  ~ the terms of the GNU General Public License as published by the Free Software
  ~ Foundation, either version 3 of the License, or (at your option) any later
  ~ version.
  ~
  ~ This program is distributed in the hope that it will be useful, but WITHOUT
  ~ ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
  ~ FOR A PARTICULAR PURPOSE. See the GNU General Public License for more
  ~ details.
  ~
  ~ You should have received a copy of the GNU General Public License along with
  ~ this program. If not, see <http://www.gnu.org/licenses/>.
  -->

<resources>

	<string name="app_name">Holochron</string>
	<string name="app_summary">Holochron is an open source stopwatch for Android.</string>
	<string name="app_code">https://github.com/lenidh/holochron</string>
	<string name="app_license">License: GPLv3+</string>
	<string name="app_developer">Developer: Moritz Heindl</string>
	<string name="app_contributions">Libraries and Images</string>
	<string name="menu_item_settings">Settings</string>
	<string name="menu_item_about">About</string>
	<string name="pref_volume_buttons">Control via volume buttons</string>
	<string name="pref_volume_buttons_use">Up: start or stop\nDown: reset or lap</string>
	<string name="pref_volume_buttons_inverse">Up: reset or lap\nDown: start or stop</string>
	<string name="pref_volume_buttons_ignore">Ignore volume buttons</string>
	<string name="pref_theme">Theme</string>
	<string name="pref_theme_dark">Dark</string>
	<string name="pref_theme_light">Light</string>
	<string name="pref_theme_classic">Classic</string>
	<string name="pref_sort_by_number">Sort by number</string>
	<string name="pref_sort_by_lap_time">Sort by time</string>
	<string name="start">Start</string>
	<string name="stop">Stop</string>
	<string name="reset">Reset</string>
	<string name="lap">Lap</string>
	<string name="elapsed_time">Elapsed time</string>
	<string name="restart">Restart</string>
	<string name="restart_later">Later</string>
	<string name="restart_message">In order to apply the theme you have to restart the app.</string>
	<string name="lap_time">Lap time</string>
	<string name="thanks_to">&#xb7; &lt;a href="http://actionbarsherlock.com/">ActionBarSherlock&lt;/a> (Apache License
		2)&lt;br/>&#xb7; &lt;a href="http://tiheum.deviantart.com/art/Faenza-Icons-173323228">Faenza&lt;/a> based app
		icon (GPLv3)
	</string>
	<string name="digital_digit_description">A digital number.</string>
	<string name="digital_colon_description">A digital colon.</string>
	<string name="notification_text">Touch to open app.</string>

</resources>